--- a/ts_2425/atmclient/pom.xml
+++ b/ts_2425/atmclient/pom.xml
@@ -3,10 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-          <groupId>com.ts_24_25</groupId>
-          <artifactId>ts_2425</artifactId>
-          <version>1.0-SNAPSHOT</version>
+        <groupId>com.ts_24_25</groupId>
+        <artifactId>ts_2425</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.ts_24_25</groupId>
@@ -22,42 +23,32 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.0</version>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
                 <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <outputDirectory>${project.basedir}/..</outputDirectory>
                     <archive>
                         <manifest>
                             <mainClass>com.ts_24_25.ATMClient</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
-            <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <version>3.3.0</version>
-            <configuration>
-                <descriptorRefs>
-                    <descriptorRef>jar-with-dependencies</descriptorRef>
-                </descriptorRefs>
-                <archive>
-                    <manifest>
-                        <mainClass>com.ts_24_25.ATMClient</mainClass>
-                    </manifest>
-                </archive>
-            </configuration>
-            <executions>
-                <execution>
-                    <id>make-assembly</id>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>single</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
         </plugins>
     </build>
+
 
     <dependencies>
         <dependency>
@@ -66,5 +57,4 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
 </project>
