Alterações no read me e nos pom files para o nome do output do jar

--- a/ts_2425/atmclient/pom.xml
+++ b/ts_2425/atmclient/pom.xml
@@ -30,6 +30,8 @@
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                     <outputDirectory>${project.basedir}/..</outputDirectory>
+                    <finalName>ATM</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
                             <mainClass>com.ts_24_25.ATMClient</mainClass>
