--- a/ts_2425/bankserver/pom.xml
+++ b/ts_2425/bankserver/pom.xml
@@ -30,6 +30,8 @@
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                     <outputDirectory>${project.basedir}/..</outputDirectory>
+                    <finalName>Bank</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
                             <mainClass>com.ts_24_25.BankServer</mainClass>
