Added the MITM files
Altered the general pom.xml file to include the mitm

--- a/ts_2425/pom.xml
+++ b/ts_2425/pom.xml
@@ -12,6 +12,7 @@
         <module>bankserver</module>
         <module>atmclient</module>
         <module>utils</module>
+        <module>mitm</module>
     </modules>
 
     <properties>
